syntax = "proto3";

package block;

service BlockManager {
  rpc NewBlock(BlockData) returns (Block) {}
}

message Block {
  BlockHeader header = 1;
  BlockData   data = 2;
}

message BlockHeader {
  uint64 version = 1;
  int64 timestamp = 2;
  bytes prevBlockHash = 3;
  bytes Hash = 4;  
}

message BlockData {
  repeated bytes data = 1;
}
